fix: [contacts & navbar in 320px screen size]

--- a/src/components/UI/contacts/default/Contacts.css
+++ b/src/components/UI/contacts/default/Contacts.css
@@ -3,11 +3,11 @@
 .contacts-ul {
     position: relative;
     display: flex;
+    gap: 30px;
 }
 .contacts-ul .contacts-li {
     position: relative;
     list-style: none;
-    margin: 0 20px;
     cursor: pointer;
 }
 .contacts-ul .contacts-li .contacts-href {
